Added files via upload

--- a/index.html
+++ b/index.html
@@ -11,27 +11,26 @@
 					<img src="images/logo.png" alt="">
 				</div>
 				<div class="menu1">
-					<div><center>Register</center></div>
+					<div><center><a href="#" style="text-decoration:none">Register</a></center></div>
 					<a href="#"><img src="images/menu-1.png"></a>
 				</div>
 				<div class="menu2">
-					<div><center>Shop</center></div>
+					<div><center><a href="#" style="text-decoration:none">Shop</a></center></div>
 					<a href="#"><img src="images/menu-2.png"></a>
 				</div>
 				<div class="menu3">
-					<div><center>Gift Cards</center></div>
+					<div><center><a href="#" style="text-decoration:none">Gift Cards</a></center></div>
 					<a href="#"><img src="images/menu-3.png"></a>
 				</div>
 				<div class="menu4">
-					<div><center>On Sale</center> </div>
+					<div><center><a href="#" style="text-decoration:none">On Sale</a></center> </div>
 					<a href="#"><img src="images/menu-4.png"></a>
 				</div>
 				<div class="menu5">
-					<div><center>New Product</center></div>
+					<div><center><a href="#" style="text-decoration:none">New Product</a></center></div>
 					<a href="#"><img src="images/menu-5.png"></a>
 				</div>
 			</div>
-			<div class="header2"></div>
 			<div class="content">
 				<div class="main1">
 					<h1><a href="#">Donec felis augue, solicitudin</a></h1>
@@ -43,26 +42,25 @@
 					<a href="#"><img src="images/demo.png"></a>
 					<div><center>Assorted Couches &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$209.00 Each</center></div>
 				</div>
-				<div class="footer">
-					<div class="product1">
-						<a href="#"><center><img src="images/product-1.png"></center></a>
-						<div style="font-size:18px "><center>Music & MP3 Player</center></div>
-						<div style="font-size:12px ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat qui voluptatibus, veritatis dolorum alias tenetur obcaecati architecto in facilis ab. </div>
+			</div>
+			<div class="footer">
+				<div class="product1">
+					<a href="#"><center><img src="images/product-1.png"></center></a>
+					<div style="font-size:18px "><center>Music & MP3 Player</center></div>
+					<div style="font-size:12px ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat qui voluptatibus, veritatis dolorum alias tenetur obcaecati architecto in facilis ab. </div>
 					</div>
 					<div class="product2">
-						<a href="#"><center><img src="images/product-2.png"></center></a>
-						<div style="font-size:18px "><center>Computer Accessories</center></div>
-						<div style="font-size:12px ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat qui voluptatibus, veritatis dolorum alias tenetur obcaecati architecto in facilis ab.  </div>
+					<a href="#"><center><img src="images/product-2.png"></center></a>
+					<div style="font-size:18px "><center>Computer Accessories</center></div>
+					<div style="font-size:12px ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat qui voluptatibus, veritatis dolorum alias tenetur obcaecati architecto in facilis ab.  </div>
 					</div>
 					<div class="product3">
-						<a href="#"><center><img src="images/product-3.png"></center></a>
-						<div style="font-size:18px "><center>Kids Toys</center></div>
-						<div style="font-size:12px ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat qui voluptatibus, veritatis dolorum alias tenetur obcaecati architecto in facilis ab.  </div>
-					</div>
+					<a href="#"><center><img src="images/product-3.png"></center></a>
+					<div style="font-size:18px "><center>Kids Toys</center></div>
+					<div style="font-size:12px ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat qui voluptatibus, veritatis dolorum alias tenetur obcaecati architecto in facilis ab.  </div>
 				</div>
-
-				
 			</div>
+
 			
 			
 		</div>
